Add of '/{region} redirection.

--- a/.htaccess
+++ b/.htaccess
@@ -6,4 +6,5 @@ RewriteRule ^\.htaccess$ $1 [R=403,L]
 RewriteCond %{REQUEST_URI} ^\/(js)|(img)|(css)\/.*$
 RewriteRule ^(.*)$ $1 [L]
 
+RewriteRule ^([a-zA-Z]+)$ ?region=$1 [L]
 RewriteRule ^([a-zA-Z]+)\/([^\/]*)\/?$ ?region=$1&pseudo=$2 [L]
